Fix iOS date input calendar control overflowing padding

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -222,6 +222,11 @@ select {
         box-shadow 0.1s;
 }
 
+input[type="date"] {
+    -webkit-appearance: none;
+    appearance: none;
+}
+
 input[type="text"]:focus,
 input[type="number"]:focus,
 input[type="date"]:focus,
